--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: terra_flutter
-description: A new flutter plugin project.
-version: 0.0.1
-homepage:
+name: terra_flutter_bridge
+description: Terra Flutter bridge to connect to TerraiOS and TerraAndroid.
+version: 0.0.2
+homepage: https://github.com/tryterra/terra-flutter
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
