--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  terra_flutter:
+  terra_flutter_bridge:
     # When depending on this package from a real application you should use:
     #   terra_flutter: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
