--- a/android/build.gradle
+++ b/android/build.gradle
@@ -34,6 +34,7 @@ android {
     }
 
     dependencies {
-        implementation 'co.tryterra:terra-android:1.0.11'
+        implementation 'co.tryterra:terra-android:1.0.21'
+        implementation 'com.google.code.gson:gson:2.9.0'
     }
 }
