--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        jcenter()  // new
     }
 
     dependencies {
@@ -16,6 +17,7 @@ rootProject.allprojects {
     repositories {
         google()
         mavenCentral()
+        jcenter()  // new
     }
 }
 
@@ -34,7 +36,7 @@ android {
     }
 
     dependencies {
-        implementation 'co.tryterra:terra-android:1.0.21'
+        implementation 'co.tryterra:terra-android:1.1.1'
         implementation 'com.google.code.gson:gson:2.9.0'
     }
 }
