--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -18,13 +18,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-  terra_flutter_bridge:
+  terra_flutter_bridge: ^0.3.2
     # When depending on this package from a real application you should use:
     #   terra_flutter: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
     # The example app is bundled with the plugin so we use a path dependency on
     # the parent directory to use the current plugin's version.
-    path: ../
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
