--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -15,6 +15,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  logger: '2.0.2'
   flutter:
     sdk: flutter
 
