--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,14 @@
 name: terra_flutter_bridge
 description: Terra Flutter bridge to connect to TerraiOS and TerraAndroid.
-version: 0.5.4
+version: 0.6.0
 homepage: https://github.com/tryterra/terra-flutter
 
 environment:
-  sdk: ">=2.15.1 <3.0.0"
-  flutter: ">=2.5.0"
+  sdk: ">=3.0.0 <4.0.0"
+  flutter: ">=3.0.0"
 
 dependencies:
+  http: ^0.13.3
   flutter:
     sdk: flutter
 
