--- a/android/build.gradle
+++ b/android/build.gradle
@@ -36,7 +36,7 @@ android {
     }
 
     dependencies {
-        implementation 'co.tryterra:terra-android:1.4.23'
+        implementation 'co.tryterra:terra-android:0.2.8-beta'
         implementation 'com.google.code.gson:gson:2.9.0'
     }
 }
