--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="co.tryterra.terra_flutter_bridge">
+    <queries>
+      <package android:name="com.google.android.apps.healthdata" />
+      <package android:name="com.sec.android.app.shealth" />
+    </queries>
+
 </manifest>
+
