--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="co.tryterra.terra_flutter_example">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="co.tryterra.terra">
     
    <application
         android:label="terra_flutter_example"
