--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,6 +26,14 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion 33
 
+    if (project.android.hasProperty("namespace")) {
+        namespace 'com.byneapp.flutter_config'
+    }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
