--- a/android/build.gradle
+++ b/android/build.gradle
@@ -27,7 +27,7 @@ android {
     compileSdkVersion 33
 
     if (project.android.hasProperty("namespace")) {
-        namespace 'com.byneapp.flutter_config'
+        namespace 'co.tryterra.terra_flutter_bridge'
     }
 
     kotlinOptions {
