feat: add namespace (#12)
* Update build.gradle

* Update build.gradle

* Update build.gradle

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,6 +26,10 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion 33
 
+    if (project.android.hasProperty("namespace")) {
+        namespace 'co.tryterra.terra_flutter_bridge'
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
