--- a/android/build.gradle
+++ b/android/build.gradle
@@ -40,7 +40,8 @@ android {
     }
 
     dependencies {
-        implementation 'co.tryterra:terra-android:1.5.1'
+        implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:1.7.1'
+        implementation 'co.tryterra:terra-android:1.5.2'
         implementation 'com.google.code.gson:gson:2.9.0'
     }
 }
