--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -49,6 +49,10 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+
+    buildFeatures {
+        buildConfig false
+    }
 }
 
 flutter {
