--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,42 +5,41 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        jcenter()  // new
     }
-
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.0'
-    }
-}
-
-rootProject.allprojects {
-    repositories {
-        google()
-        mavenCentral()
-        jcenter()  // new
+        // Kotlin version compatible with AGP 7.0.0
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31'
     }
 }
 
 apply plugin: 'com.android.library'
+apply plugin: 'org.jetbrains.kotlin.android'
+apply plugin: 'kotlin-parcelize'
 
 android {
     compileSdkVersion 33
-    
-    if (project.android.hasProperty("namespace")) {
-        namespace 'co.tryterra.terra_flutter_bridge'
+    namespace 'co.tryterra.terra_flutter_bridge'
+
+    defaultConfig {
+        minSdkVersion 28
     }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
-    defaultConfig {
-        minSdkVersion 28
+    kotlinOptions {
+        jvmTarget = '1.8'
     }
+}
 
-    dependencies {
-        implementation 'co.tryterra:terra-android:0.2.17-beta'
-        implementation 'com.google.code.gson:gson:2.9.0'
-    }
+repositories {
+    google()
+    mavenCentral()
+}
+
+dependencies {
+    implementation 'co.tryterra:android-sdk:0.0.1'
+    implementation 'com.google.code.gson:gson:2.9.0'
 }
