fix: Crash on android

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -35,6 +35,7 @@ android {
 
     defaultConfig {
         minSdkVersion 28
+        consumerProguardFiles 'proguard-rules.pro'
     }
 
     dependencies {
