--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,7 +5,6 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        jcenter()  // new
     }
 
     dependencies {
@@ -17,7 +16,6 @@ rootProject.allprojects {
     repositories {
         google()
         mavenCentral()
-        jcenter()  // new
     }
 }
 
@@ -37,6 +35,7 @@ android {
 
     defaultConfig {
         minSdkVersion 28
+        consumerProguardFiles 'proguard-rules.pro'
     }
 
     dependencies {
