--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -1,13 +1,13 @@
-buildscript {
-    repositories {
-        google()
-        mavenCentral()
-    }
+// buildscript {
+//     repositories {
+//         google()
+//         mavenCentral()
+//     }
 
-    dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.2'
-    }
-}
+//     dependencies {
+//         classpath 'com.android.tools.build:gradle:7.4.2'
+//     }
+// }
 
 allprojects {
     repositories {
